tests/negative/regression/r30.orng
fn main() -> Int { 
    let x: comptime {?match () { _ => Int }}
    x.some
} 